Fix main side expanding / collapsing
HTML:
- wrap main side in a container for easier styling and generaliztion.
- add buttons for collapsing/expanding the main side
JS:
- change the root style modification so it changes the root properties, not the root. this allows to make as many changes as i want. otherwise additional changes delete previous ones. IMPORTANT
- add expanding collapsing options for the side main: when clicking the buttons, when clicking the headers, when clicking the div. NOT when clicking other components on the side main.
- when on big screen there is only one button, at the top, on small screen each element is expanded/collapsed separately.
- when resizing the page, all the elements open.
- generalized rules for classes.

CSS:
- styling for buttons, will probably change.
- styling for expanded/collapsed main side at big and small screen.
- not yet fully generalised for classes.

=>now we can add more side elements with same classes and general layout (section > button, header, etc) and they will fit in with JS!

ISSUES:
- some generalization left for side elements, style with classes, not with section names!
- decide on button collapse/expand design

--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,17 @@
 :root{
     --nav-min-width:40px;
     --nav-expanded-width: 250px;
+    --side-min-width: 70px;
+    --side-expanded-width:310px;
     --footer-height:100px;
     --border-rd-400: 15px;
     --drop-shdw-700:1px 1px 1px rgb(45, 45, 45);
     --accent-clr-300:rgb(120, 120, 120);
 
+    --tab-height: 39px;
+    --tab-width: 182px;
+
+    --side-width:var(--side-expanded-width);
     --nav-width: var(--nav-min-width);
     --size-300:.5rem;
     --post-it-size:250px;
@@ -339,9 +345,10 @@ input[type="search"]:-ms-input-placeholder {
 
 main{
     display: grid;
-    grid-template-columns: 3fr minmax(max-content, 1fr);
-    grid-template-rows: max-content max-content auto;
-    row-gap: 3rem;
+    grid-template-columns: 3fr var(--side-width);
+    transition: all ease-in .4s;
+    /* grid-template-rows: max-content max-content auto; */
+    /* row-gap: 3rem; */
 }
 
 /* BOOKS */
@@ -359,6 +366,7 @@ main{
     column-gap: 1rem;
     justify-items: center;
     justify-content: center;
+    padding-right: var(--tab-height);
 }
 
 .books > h3 {
@@ -366,6 +374,51 @@ main{
     grid-row: 1;
 }
 
+
+/* SIDE TAB */
+button.tab-toggle {
+    --tab-height:80px;
+    --tab-width:100px;
+
+    height: var(--tab-height);
+    width: var(--tab-width);
+    border: none;
+    border-radius: 0 0 5px 5px;
+    background: linear-gradient(0deg, red 46%, rgba(0,0,0,.2) 49%);
+    padding-top: calc(var(--tab-height) * .5);
+
+    position: absolute;
+    top: calc(var(--tab-width) / 2);
+    left: calc(-1 * ((var(--tab-height) + var(--tab-width)) / 2) + (var(--tab-height) * .5));
+    
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    cursor: pointer;
+    z-index: 1;
+}
+
+button.tab-toggle.recommendation-toggle {
+    display: none;
+}
+
+
+.announcements[data-collapsed] > .announcements-container,
+.announcements[data-collapsed] >  button.left-arrow,
+.announcements[data-collapsed] >  button.right-arrow,
+.announcements[data-collapsed] >  .thumbnails-container {
+    display: none;
+}
+
+.announcements[data-collapsed]{
+    height: 12em;
+    padding: initial;
+}
+
+.announcements[data-collapsed]>.announcement-header,
+.daily-recommendation[data-collapsed]>.recommendation-header {
+    transform: rotate(90deg) translate(50%);
+}
 
 /* ANOUNCEMENTS */
 .announcements{
@@ -375,26 +428,45 @@ main{
     grid-template-rows: repeat(3, min-content);
     justify-content: center;
     position: relative;
+    padding: 1rem 0 3rem 0;
+    transition: all ease-in-out .5s;
 }
 
-.announcement-header {
+
+.announcement-header,
+.recommendation-header {
     font-size: 1.5rem;
     text-align: center;
 }
 
-/* button.expand-tack{
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: none;
-    box-shadow: inset -1px -1px 3px 0 rgb(120, 120, 120), 1px 1px 2px 0 black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.875rem;
-    color: rgb(45, 45, 45);
-    text-shadow: 1px 0px 0px rgb(120, 120, 120);
-} */
+@media (max-width: 50em) {
+    button.tab-toggle {
+        transform: rotate(0deg);
+        top: auto;
+        bottom: calc(-.5* var(--tab-height));
+        left: 10px;
+    }
+
+    .announcements[data-collapsed],
+    .daily-recommendation[data-collapsed] {
+        height: min-content;
+        padding: initial;
+    }
+    .announcements[data-collapsed]>.announcement-header,
+    .daily-recommendation[data-collapsed]>.recommendation-header {
+        transform: rotate(0deg);
+    }
+
+    .daily-recommendation{
+        border: 1px solid;
+        background-color: #D9D9D9;
+    }
+    button.tab-toggle.recommendation-toggle {
+        display: block;
+        left: calc(10px + var(--tab-width) + 5px);
+        
+    }
+}
 
 .post-it{
     width: var(--post-it-size);
@@ -408,7 +480,7 @@ main{
     -webkit-transform: rotate(2deg);
     -moz-transform: rotate(2deg);
     scroll-snap-align: start;
-    font-family: var(--ff-announcements);
+    font-family: var(--ff-announcements); 
     box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
@@ -557,6 +629,7 @@ button.left-arrow:disabled:hover >img {
 .daily-recommendation{
     grid-column: 2;
     grid-row: 2;
+    position: relative;
 }
 
 /* UTILITIES */
@@ -608,7 +681,7 @@ button.left-arrow:disabled:hover >img {
 
     main{
         grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto;
     }
     
     .announcements{
@@ -616,6 +689,12 @@ button.left-arrow:disabled:hover >img {
     }
     .daily-recommendation{
         grid-area: 2 /1;
+    }
+
+    .announcements,
+    .daily-recommendation {
+        border-left: none;
+        border-bottom: 2px solid;
     }
 
     .books{
